--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "nodemon": "^3.1.7",
