--- a/view/angular.json
+++ b/view/angular.json
@@ -19,7 +19,7 @@
           "options": {
             "outputPath": "dist/view",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
