--- a/view/package.json
+++ b/view/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
